--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -21,6 +21,7 @@
 
             <TextView
                 android:id="@+id/tv_time_title"
+                style="@style/TextAppearance.Material3.HeadlineSmall"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
@@ -28,14 +29,17 @@
 
             <TextView
                 android:id="@+id/tv_time_number"
+                style="@style/TextAppearance.Material3.HeadlineSmall"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
+                android:layout_marginEnd="10dp"
                 android:layout_toEndOf="@id/tv_time_title"
                 android:text="@string/time_number" />
 
             <TextView
                 android:id="@+id/tv_score_title"
+                style="@style/TextAppearance.Material3.HeadlineSmall"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
@@ -45,6 +49,7 @@
 
             <TextView
                 android:id="@+id/tv_score_number"
+                style="@style/TextAppearance.Material3.HeadlineSmall"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
