--- a/app/src/main/res/layout/activity_game_splash.xml
+++ b/app/src/main/res/layout/activity_game_splash.xml
@@ -4,14 +4,27 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/cover"
     tools:context=".GameSplashActivity">
 
-    <TextView
-        android:id="@+id/tv_game_title"
-        style="@style/TextAppearance.Material3.TitleLarge"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:text="@string/game_title" />
 
+    <Button
+        android:id="@+id/btn_time_mode"
+        android:layout_width="200dp"
+        android:layout_height="40dp"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="100dp"
+        android:background="@drawable/btn_bg"
+        android:text="2分钟模式" />
+
+    <Button
+        android:id="@+id/btn_infinite_mode"
+        android:layout_width="200dp"
+        android:layout_height="40dp"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="50dp"
+        android:background="@drawable/btn_bg"
+        android:text="无限时间模式" />
 </RelativeLayout>
